@@ -25,3 +25,4 @@ add_subdirectory( SortedArrayTest )
 add_subdirectory( LinkedListTest )
 add_subdirectory( FunctorTest )
 add_subdirectory( TwoLockQueueTest )
+add_subdirectory( TimerTest )
